# R-Type-multi-threads

./: CMakeLists.txt  README.md
assets/bonus/: Bonus.yaml
assets/entities/: Entities.yaml
assets/levels/: Stage.yaml
assets/tiles/: Tiles.yaml
src/: main.cpp
src/Core/: Config.hpp  Game.cpp  Game.hpp  GameState.hpp  IMenu.hpp  Menu.cpp  Menu.hpp  MenuInGame.cpp  MenuInGame.hpp  MenuMain.cpp  MenuMain.hpp  MenuOption.cpp  MenuOption.hpp  MenuServersList.cpp  MenuServersList.hpp  TextField.hpp  Utils.cpp  Utils.hpp
src/Core/Game/: Game.cpp  Game.hpp  GameDraw.cpp  GameEvent.cpp  GameUpdate.cpp
src/Entities/: Animations.cpp  Animations.hpp  Bonus.cpp  Bonus.hpp  Bullet.cpp  Bullet.hpp  BulletManager.hpp  Enemies.cpp  Enemies.hpp  Entity.hpp  EntityManager.hpp  Player.cpp  Player.hpp  RemotePlayers.cpp  RemotePlayers.hpp  Turret.cpp  Turret.hpp
src/Gameplay/: Bullet.hpp  BulletManager.cpp  BulletManager.hpp  Enemy.hpp  EnemyManager.cpp  EnemyManager.hpp  Player.cpp  Player.hpp  RemotePlayers.hpp
src/Network/: Client.cpp  Client.hpp  NetworkDiscovery.cpp  NetworkDiscovery.hpp  NetworkHelpers.hpp  RemotePlayers.hpp  Server.cpp  Server.hpp  ThreadSafeQueue.hpp
src/Network/Client/: Client.cpp  Client.hpp  ClientHandle.cpp  ClientPacketReceived.cpp  ClientPacketSend.cpp
src/Network/Packets/: ClientInput.hpp  Messages.hpp  Packets.hpp  PlayerState.hpp  Snapshot.hpp
src/Network/Protocols/: NetworkDiscovery.cpp  NetworkDiscovery.hpp
src/Network/Protocols/Packets/: Bonuses.hpp  Bullet.hpp  Enemies.hpp  Packets.hpp  Player.hpp  Segmant.hpp  Segment.hpp  Turret.hpp  protocol.hpp
src/Network/Server/: Server.cpp  Server.hpp  ServerCollision.cpp  ServerFunctions.cpp  ServerHandle.cpp  ServerPacketBroadcast.cpp  ServerPacketReceived.cpp  ServerPacketSend.cpp  ServerUpdate.cpp
src/UI/: UIButton.hpp  UITextBox.hpp
src/UI/Controls/: UIButton.hpp  UITextBox.hpp
src/UI/Menus/: IMenu.hpp  MenuInGame.cpp  MenuInGame.hpp  MenuMain.cpp  MenuMain.hpp  MenuOption.cpp  MenuOption.hpp  MenuServersList.cpp  MenuServersList.hpp
src/World/: BlockVisual.hpp  Entities.cpp  Entities.hpp  Level.cpp  Level.hpp  Segments.cpp  Segments.hpp  Terrain.cpp  Terrain.hpp  Tile.cpp  Tile.hpp
